[project]
name = "whisper-streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.1.1",
    "librosa>=0.11.0",
    "mlx-whisper>=0.4.2",
    "soundfile>=0.13.1",
    "structlog>=25.4.0",
    "torchaudio>=2.7.1",
    "transformers>=4.53.2",
]
